# Emmaus

./: .gitignore  README.md  pyproject.toml
data/: jfb_commentary.json  sample_kjv_excerpt.json
docs/: BIBLE_SOURCE_CONNECTION.md  ESV_SETUP.md  IPHONE_PROTOTYPING.md  LICENSED_TRANSLATIONS.md  OBJECTIVE.md  PRODUCT_BLUEPRINT.md  ROADMAP.md  TRANSLATION_PROVIDER_STRATEGY.md
emmaus/: __init__.py  main.py
emmaus/api/: deps.py  schemas.py
emmaus/api/routes/: agent.py  commentary.py  engagement.py  health.py  study.py  text_sources.py  texts.py  users.py
emmaus/core/: bootstrap.py  config.py
emmaus/domain/: models.py
emmaus/providers/: __init__.py  commentary.py  llm.py  text.py
emmaus/repositories/: __init__.py  study.py
emmaus/services/: agent.py  personalization.py  study.py  text.py
emmaus/web/: index.html
emmaus/web/static/: app.js  styles.css
tests/: test_app.py  test_llm.py
