[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emmaus"
version = "0.1.0"
description = "Modular, open-source backend for an agentic Bible study application."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Open Source Contributors" }
]
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "uvicorn>=0.30.0,<1.0.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0,<1.0.0",
  "pytest>=8.3.0,<9.0.0"
]

[tool.setuptools.packages.find]
include = ["emmaus*"]

[tool.setuptools.package-data]
"emmaus" = ["web/index.html", "web/static/*.css", "web/static/*.js"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]


